<?xml version="1.0"?>
<package>
  <name>denso_robot_core_test</name>
  <version>2.0.0</version>
  <description>DENSO robot control core test package</description>

  <maintainer email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>bcap_core</build_depend>
  <build_depend>denso_robot_core</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>

  </export>
</package>
