<?xml version="1.0"?>
<package>
  <name>denso_robot_core_test</name>
  <version>3.0.2</version>
  <description>The denso robot core test package includes a node for testing denso robot core node.</description>
  <maintainer email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/denso_robot_core_test</url>
  <author email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>bcap_core</build_depend>
  <build_depend>denso_robot_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
