<?xml version="1.0"?>
<package>
  <name>denso_robot_descriptions</name>
  <version>3.0.4</version>
  <description>The denso robot descriptions package includes URDF files for DENSO robots.</description>
  <maintainer email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/denso_robot_descriptions</url>
  <author email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
