<?xml version="1.0"?>
<package>
  <name>denso_robot_descriptions</name>
  <version>3.1.2</version>
  <description>The denso robot descriptions package includes URDF files for DENSO robots.</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/denso_robot_descriptions</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
