<?xml version="1.0"?>
<package>
  <name>denso_robot_gazebo</name>
  <version>3.1.1</version>
  <description>The denso robot gazebo package includes a launch file for simulating DENSO robot.</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/denso_robot_gazebo</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

</package>
