<?xml version="1.0"?>
<package>
  <name>denso_robot_ros</name>
  <version>4.0.0</version>
  <description>The denso robot ros stack constains libraries, configuration files, and ROS nodes for controlling a DENSO robot from ROS.</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/denso_robot_ros</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <run_depend>bcap_core</run_depend>
  <run_depend>bcap_service</run_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
