<package>
  <name>denso_launch</name>
  <version>3.0.0</version>
  <description>Although the package name might indicate that it only could only contain generic .launch files, this package functions as a center location for storing .launch files for all DENSO robots (currently <a href = "http://wiki.ros.org/vs060">vs060</a>). </description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <url type="website">http://wiki.ros.org/denso_launch</url>
  <url type="bugtracker">https://github.com/start-jsk/denso/issues</url>
  <url type="repository">https://github.com/start-jsk/denso</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>checkerboard_detector</run_depend>
  <run_depend>denso_robot_control</run_depend>
  <run_depend>denso_robot_moveit_config</run_depend>

</package>
