<package>
  <name>vs060_gazebo</name>
  <version>3.0.0</version>
  <description>Gazebo simulation package for Denso vs060 arm.</description>
  
  <author>Mahsa Parsapour</author>
  <maintainer email="mahsa.parsapour@gmail.com">Mahsa Parsapour</maintainer>  
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</maintainer>  

  <license>BSD</license>
  
  <url type="bugtracker">https://github.com/start-jsk/denso/issues</url>
  <url type="repository">https://github.com/start-jsk/denso</url>
  <url type="website">http://wiki.ros.org/vs060_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend> 
  <run_depend>controller_manager</run_depend> 
  <run_depend>denso_robot_descriptions</run_depend>
</package>
